  :meth:`tcrossprod`, :meth:`transpose`.
 
- :meth:`IntVector.tabulate` to count the number of times a value is found in the vector

- :meth:`RVector.sample` to draw a (random) sample of arbitrary size from a vector

- :data:`NA_bool`, :data:`NA_real`, :data:`NA_integer`, :data:`NA_character`, 
  :data:`NA_complex` as aliases for R's missing values.

:mod:`rpy2.rinterface`:

- New functions for specifying callback functions for R's front-ends:
  :func:`set_showmessage`, :func:`set_flushconsole`,
  :func:`set_choosefile`, :func:`set_showfiles`

- New object :data:`R_MissingArg`, exposing R's special object for representing
  a "missing" parameter in a function call.
  (#this was first a patch by Nathaniel Smith with a function getMissingArgSexp)

- Initial commit of a callback-based implementation of an R graphical device
  (this is for the moment very experimental - and not fully working)

- :meth:`SexpClosure.rcall` is now taking 2 parameters, 
  a tuple with the parameters and
  an :class:`SexpEnvironment` in which the call is to be evaluated.

- :attr:`Sexp.__sexp__` now has a setter method. This permits the rebinding
  of the underlying R SEXP, and allows to expose `foo<-` type of R methods
  as Python function/methods with side effects.

- Objects of R type RAWSXP are now exposed as instances of class
  :class:`SexpVector`.

- Factory function :func:`unserialize` to build Sexp* instances from byte
  string serialized with R's own 'serialize'.

- Method :meth:`Sexp.__reduce__` for pickling/unpickling

- Ability to specify a callback function for R_CleanUp (called upon exiting R)
  through :func:`get_cleanup` and :func:`set_cleanup` [very experimental]

- Class :class:`ListSexpVector` for creating R lists easily
  (complementing :class:`IntSexpVector`, :class:`StrSexpVector`, and friends) 

- :meth:`colnames`, :meth:`rownames` for :class:`Array` (formerly *RArray*) are now 
  property-style getters

- Crash when trying to create a SexpVector of a non-vector type